--- a/about.html
+++ b/about.html
@@ -8,5 +8,7 @@
 </head>
 <body>
     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Esse quam obcaecati natus sed ratione minus expedita, ducimus placeat quidem, ut consequuntur. Quod ea saepe iure non libero et praesentium inventore?</p>
+    <hr>
+    <p>This is Pratham here!!</p>
 </body>
 </html>
