--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <h1>Pratham Jain</h1>
     <hr>
     <p>Hello World</p>
+
+    <a href="about.html">Know more about me!!</a>
     
 </body>
 </html>
