--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 </head>
 <body>
     <h1>Pratham Jain</h1>
-    <hr>
     <p>Hello World</p>
 
     <a href="about.html">Know more about me!!</a>
+    <p>This is the newly addded line!</p>
     
 </body>
 </html>
