minor change in contact

--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,7 @@
   </head>
   <body>
     <div class="container">
-    <h1>Hello, world!</h1>
+    <h1>Contact me!!/h1>
 
     <div class="input-group mb-3">
         <span class="input-group-text" id="basic-addon1">@</span>
