add info about me

--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
       <div class="container alert alert-success">
         <h1>Pratham Jain</h1>
         <p>Hello World</p>
+        <p>I study in Jaypee noida. and I live in Khargone.</p>
     
         <a href="about.html">Know more about me!!</a>
         
