--- a/about.html
+++ b/about.html
@@ -35,6 +35,14 @@
         </div>
       </nav>
 
+      <div class="card" style="width: 40rem; margin: auto;">
+        <img src="/images/WhatsApp Image 2021-04-18 at 5.37.15 PM.jpeg" class="card-img-top" alt="..." style="width: 80%; margin: 10px auto;">
+        <div class="card-body">
+          <h1 class="card-title">Pratham Jain</h1>
+          <p class="card-text">Pratham is pre-final year undergrad, fluent in DSA. He is currently learning web-dev, and aims to crack some good product based company, and to work as a software developer.</p>
+          <a href="Pratham's Resume.pdf" class="btn btn-primary">Download Resume</a>
+        </div>
+      </div>
     <!-- Optional JavaScript; choose one of the two! -->
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
