--- a/projects.html
+++ b/projects.html
@@ -20,10 +20,10 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="about.html">Know me</a>
+                <a class="nav-link " aria-current="page" href="about.html">Know me</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="projects.html">Projects</a>
+                <a class="nav-link active" href="projects.html">Projects</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="contact.html">Contact Me</a>
@@ -35,6 +35,7 @@
         </div>
       </nav>
 
+      <h1 style="padding: 2rem 2rem;">Projects in progress! 😄</h1>
     <!-- Optional JavaScript; choose one of the two! -->
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
