modified projects page

--- a/projects.html
+++ b/projects.html
@@ -35,7 +35,14 @@
         </div>
       </nav>
 
-      <h1 style="padding: 2rem 2rem;">Projects in progress! 😄</h1>
+      <h1 style="padding: 1rem 2rem;">Projects in progress! 😄</h1>
+      <p style="padding: 1rem 2rem; font-size: larger;" >For the time being, check my another portfolio website!</p>
+      <div class="button" style="padding-left: 2rem;">
+        <a href="http://prathamjain.netlify.app/" class="btn btn-primary">Portfolio</a>
+
+      </div>
+
+
     <!-- Optional JavaScript; choose one of the two! -->
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
