--- a/contact.html
+++ b/contact.html
@@ -62,7 +62,7 @@
                   target="_blank"
                   href="https://www.linkedin.com/in/iprathamjain/"
                 >
-                  <img src="/images/linkedin.svg"
+                  <img src="images/l.svg"
                 /></a>
               </li>
               <li class="list-item-inline">
@@ -70,7 +70,7 @@
                   class="link"
                   href="https://twitter.com/prathamjain__"
                   target="_blank"
-                  ><img src="/images/twitter.svg"
+                  ><img src="images/t.svg"
                 /></a>
               </li>
               <li class="list-item-inline">
@@ -78,7 +78,7 @@
                   class="link"
                   target="_blank"
                   href="https://www.instagram.com/prathamjain__/"
-                  ><img src="/images/instagram.svg"
+                  ><img src="images/i.svg"
                 /></a>
               </li>
             </ul>
