--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <br>
         <p>Hey! people, welcome to my webpage. I am a pre-final year undergrad student, having interest in web-dev and to work in this tech industry.
         <br>
-        <b>Thanks You</b>
+        <b>Thank You</b>
       </p>
       <br>
       <button type="button" class="btn btn-primary btn-lg">Explore</button>
